# splines

./: .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  LICENSE  MANIFEST.in  README.rst  autobuild.sh  pyproject.toml  readthedocs.yml  setup.py
.binder/: README  postBuild  requirements.txt
.github/workflows/: docs.yml  publish.yml  tests.yml
binder/: README  requirements.txt
doc/: README.md  arc-length.ipynb  bezier.ipynb  casteljau.py  catmull-rom-non-uniform.ipynb  catmull-rom-properties.ipynb  catmull-rom-recursive.ipynb  catmull-rom-uniform.ipynb  conf.py  curve-framing.ipynb  end-conditions-natural.ipynb  external-resources.rst  finite-difference.ipynb  frenet-frames.ipynb  hermite-non-uniform.ipynb  hermite-uniform.ipynb  how-to-navigate.rst  index.ipynb  intro.rst  ipython_kernel_config.py  ipyvolume_helper.py  kochanek-bartels-non-uniform.ipynb  kochanek-bartels-uniform.ipynb  math-definitions.rst  matplotlibrc  natural.ipynb  parallel-transport.ipynb  polynomials.ipynb  python-module.rst  references.bib  references.rst  requirements.txt  utility.py
doc/_templates/: layout.html
doc/euclidean/: barry_goldman.py  bezier-de-casteljau.ipynb  bezier-non-uniform.ipynb  bezier-properties.ipynb  bezier.ipynb  casteljau.py  catmull-rom-barry-goldman.ipynb  catmull-rom-non-uniform.ipynb  catmull-rom-properties.ipynb  catmull-rom-uniform.ipynb  catmull-rom.ipynb  catmull_rom.py  end-conditions-natural.ipynb  end-conditions.ipynb  end-conditions.rst  finite-difference-non-uniform.ipynb  (+29 more)
src/: splines.py
tests/: test_catmullrom.py  test_quaternion_kb.py
(+17 files in other folders)
